--- a/game-project/index.html
+++ b/game-project/index.html
@@ -1,28 +1,50 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./src/main.ts" defer></script>
-    <!-- <link rel="stylesheet" href="./src/style.css"> -->
-    <title>SPESS</title>
-  </head> 
-  <body>
-    <section id="home">
-      <div class="box1">
-        <h1>Hello world</h1>
-      </div>
-      <div class="box2">
-        <p>foo bar</p>
-      </div>
-      <div class="box3"></div>
-    </section>
-    <section id="game">
-      <div class="box1"></div>
-      <div class="box2"></div>
-      <div class="box3"></div>
-    </section>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="./src/js/main.ts"></script>
+  <title>SPESS</title>
+</head>
+
+<body>
+  <section id="home">
+    <div class="box1">
+      <h1>SPESS - Game</h1>
+      <img id="img-background1" src="./src/images/schnick_background1.png">
+    </div>
+    <div class="box2">
+      <h2>Spielanleitung:</h2>
+      <p>Eine durch die Serie "The Big Bang Theory" bekannt gewordene Variante davon ist Stein–Papier–Schere–Echse–Spock
+        (engl. Rock–Paper–Scissors–Lizard–Spock), bei der anstatt Streichholz und Brunnen Echse und Mr. Spock eingesetzt
+        werden: Stein zerquetscht Echse, Echse vergiftet Spock, Spock zertrümmert Schere, Schere köpft Echse, Echse
+        frisst Papier, Papier widerlegt Spock und Spock verdampft Stein. Diese Variante wurde vom Amerikaner Sam Kass
+        zusammen mit Karen Bryla erfunden</p>
+    </div>
+    <div class="box3">
+      <button id="btn-start">START</button>
+    </div>
+  </section>
+
+
+  <section id="game" style="display: none;">
+    <div class="box4">
+      <p>Game Spieler: 0</p>
+      <p>Computer: 0</p>
+    </div>
+    <div class="box5">
+      <img id="img-background2" src="./src/images/schnick_background2.png">
+      <p>Stein fällt in den Brunnen.</p>
+    </div>
+    <div class="box6">
+      <div class="box-symbol"><img src="./src/images/stein.png" alt=""><span>Stein</span></div>
+      <div class="box-symbol"><img src="./src/images/schere.png" alt=""><span>Schere</span></div>
+      <div class="box-symbol"><img src="./src/images/papier.png" alt=""><span>Papier</span></div>
+      <div class="box-symbol"><img src="./src/images/spock.png" alt=""><span>Spock</span></div>
+      <div class="box-symbol"><img src="./src/images/echse.png" alt=""><span>Echse</span></div>
+    </div>
+  </section>
+</body>
 </html>
