--- a/game-project/index.html
+++ b/game-project/index.html
@@ -29,7 +29,7 @@
   </section>
 
 
-  <section id="game" style="display: none;">
+  <section id="game">
     <div class="box4">
       <p>Game Spieler: 0</p>
       <p>Computer: 0</p>
@@ -38,12 +38,13 @@
       <img id="img-background2" src="./src/images/schnick_background2.png">
       <p>Stein fällt in den Brunnen.</p>
     </div>
+
     <div class="box6">
-      <div class="box-symbol"><img src="./src/images/stein.png" alt=""><span>Stein</span></div>
-      <div class="box-symbol"><img src="./src/images/schere.png" alt=""><span>Schere</span></div>
-      <div class="box-symbol"><img src="./src/images/papier.png" alt=""><span>Papier</span></div>
-      <div class="box-symbol"><img src="./src/images/spock.png" alt=""><span>Spock</span></div>
-      <div class="box-symbol"><img src="./src/images/echse.png" alt=""><span>Echse</span></div>
+      <div id="symbol1" class="box-symbol"><img src="./src/images/stein.png" alt=""><span>Stein</span></div>
+      <div id="symbol2" class="box-symbol"><img src="./src/images/schere.png" alt=""><span>Schere</span></div>
+      <div id="symbol3" class="box-symbol"><img src="./src/images/papier.png" alt=""><span>Papier</span></div>
+      <div id="symbol4" class="box-symbol"><img src="./src/images/spock.png" alt=""><span>Spock</span></div>
+      <div id="symbol5" class="box-symbol"><img src="./src/images/echse.png" alt=""><span>Echse</span></div>
     </div>
   </section>
 </body>
