--- a/game-project/index.html
+++ b/game-project/index.html
@@ -72,7 +72,7 @@
       <img id="img-gamer" src="./src/images/gamer.png" alt="Image Gamer">
       </div>
       <div id="infobox">
-        <p id="info">⚡ Wähle eines der Gesten aus ...</p>
+        <p id="info">⚡ Wähle eine der Gesten aus ...</p>
         <p id="resultInfo"></p>
       </div>
     </div>
