--- a/game-project/index.html
+++ b/game-project/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/spess-icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/spess-icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preload" href="src/css/style.css" as="style" onload="this.rel='stylesheet'">
   <script type="module" src="./src/js/main.ts"></script>
   <title>SPESS</title>
@@ -14,7 +14,7 @@
   <section id="home">
     <div class="box1">
       <h1>SPESS - Game</h1>
-      <img id="img-background1" src="./src/images/schnick_background1.png">
+      <img id="img-schnick-logo" src="./src/images/schnick_logo.png" alt="Schnick Image">
     </div>
     <div class="box2">
       <article id="intro">
@@ -50,7 +50,6 @@
           </ul>
         </div>
       </article>
-
     </div>
     <div class="box3">
       <button id="btn-start">START</button>
@@ -67,7 +66,7 @@
 
     <div class="box5">
       <div id="img-info">
-      <img id="img-schnick" src="./src/images/schnick_background2.png" alt="Game Arena">
+      <img id="img-persons" src="./src/images/persons.png" alt="Game Arena">
       <img id="img-computer" src="./src/images/computer.png" alt="Image Computer">
       <img id="img-gamer" src="./src/images/gamer.png" alt="Image Gamer">
       </div>
@@ -79,23 +78,23 @@
 
     <div class="box6">
       <div id="symbol1" class="box-symbol">
-        <img src="./src/images/stein.png" alt="Stein">
+        <img src="./src/images/stein.png" alt="Geste Stein">
         <span>Stein</span>
       </div>
       <div id="symbol2" class="box-symbol">
-        <img src="./src/images/schere.png" alt="Schere">
+        <img src="./src/images/schere.png" alt="Geste Schere">
         <span>Schere</span>
       </div>
       <div id="symbol3" class="box-symbol">
-        <img src="./src/images/papier.png" alt="Papier">
+        <img src="./src/images/papier.png" alt="Geste Papier">
         <span>Papier</span>
       </div>
       <div id="symbol4" class="box-symbol">
-        <img src="./src/images/spock.png" alt="Spock">
+        <img src="./src/images/spock.png" alt="Geste Spock">
         <span>Spock</span>
       </div>
       <div id="symbol5" class="box-symbol">
-        <img src="./src/images/echse.png" alt="Echse">
+        <img src="./src/images/echse.png" alt="Geste Echse">
         <span>Echse</span>
       </div>
     </div>
